# proto_import

impl/: Cargo.toml
impl/src/: lib.rs
wa/: Cargo.toml
wa/src/: lib.rs  proto_import.wasm
